--- a/src/client/components/map.less
+++ b/src/client/components/map.less
@@ -1,4 +1,6 @@
 @import '~leaflet/dist/leaflet.css';
+@import '~react-leaflet-markercluster/dist/styles.min.css';
+
 
 .leaflet-container {
   height: 800px;
