--- a/src/client/components/index.less
+++ b/src/client/components/index.less
@@ -5,6 +5,7 @@
     top: 0;
     z-index: 2;
     width: 30%;
+    height: 100%;
 }
 
 .map {
@@ -12,4 +13,14 @@
     left: 0;
     top: 0;
     z-index: 1;
+}
+
+.container {
+    position: fixed;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow-x: hidden;
+    top: 270px;
+    bottom: 20px;
 }
