--- a/src/client/components/index.less
+++ b/src/client/components/index.less
@@ -7,11 +7,17 @@
 }
 .container-component {
     background-color: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+}
+
+.sidebar {
     position: absolute;
     right: 0;
-    top: 0;
     z-index: 2;
-    height: 100vh;
-    width: 30%;
-    height: 100%;
+}
+
+.toggleButton {
+    position: absolute;
+    left: -60px;
+    top: 10px;
 }
